FILE(GLOB PROCESSINGBASE_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h
								${CMAKE_CURRENT_LIST_DIR}/simplerenderer/*.h)
FILE(GLOB PROCESSINGBASE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp
								${CMAKE_CURRENT_LIST_DIR}/simplerenderer/*.cpp)

	FILE(GLOB GRIDLEAPER_HEADER ${CMAKE_CURRENT_LIST_DIR}/gridleaper/*.h)
	FILE(GLOB GRIDLEAPER_SOURCE ${CMAKE_CURRENT_LIST_DIR}/gridleaper/*.cpp)
	SET(PROCESSINGBASE_HEADER ${PROCESSINGBASE_HEADER} ${GRIDLEAPER_HEADER})
	SET(PROCESSINGBASE_SOURCE ${PROCESSINGBASE_SOURCE} ${GRIDLEAPER_SOURCE})
								
find_package(OpenGL REQUIRED)

CreateSourceGroups("${PROCESSINGBASE_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${PROCESSINGBASE_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

list(REMOVE_ITEM PROCESSINGBASE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/main.cpp)

add_library(processingbaselib OBJECT ${PROCESSINGBASE_HEADER} ${PROCESSINGBASE_SOURCE})

add_executable(processingbase 
				${CMAKE_CURRENT_LIST_DIR}/main.cpp
				$<TARGET_OBJECTS:processingbaselib>
				$<TARGET_OBJECTS:common>
				$<TARGET_OBJECTS:commands>
				$<TARGET_OBJECTS:mocca>
				$<TARGET_OBJECTS:silverbullet>
				$<TARGET_OBJECTS:jsoncpp>
				$<TARGET_OBJECTS:tripeg>
				$<TARGET_OBJECTS:opengl-base>)
				
TARGET_LINK_LIBRARIES(processingbase ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(processingbase turbojpeg-static)
TARGET_LINK_LIBRARIES(processingbase blosc_static)
IF (UNIX AND NOT APPLE)
	TARGET_LINK_LIBRARIES(processingbase EGL ${CMAKE_DL_LIBS})
ENDIF()

IF (WIN32)
	TARGET_LINK_LIBRARIES(processingbase Shlwapi.lib)
ENDIF ()

ADD_DEFINITIONS(-DGLEW_STATIC)

SET_TARGET_PROPERTIES(processingbase PROPERTIES FOLDER "trinity")
SET_TARGET_PROPERTIES(processingbaselib PROPERTIES FOLDER "lib")

SET(TRINITY_PROCESSING_INSTALL_PATH processing)
INSTALL(TARGETS processingbase RUNTIME DESTINATION ${TRINITY_PROCESSING_INSTALL_PATH})
FILE(GLOB SHADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.glsl ${CMAKE_CURRENT_SOURCE_DIR}/gridleaper/shader/*.glsl ${CMAKE_CURRENT_SOURCE_DIR}/simplerenderer/*.glsl)
INSTALL(FILES ${SHADERS} DESTINATION ${TRINITY_PROCESSING_INSTALL_PATH})