FILE(GLOB PROCESSINGDUMMY_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB PROCESSINGDUMMY_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${PROCESSINGDUMMY_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${PROCESSINGDUMMY_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

list(REMOVE_ITEM PROCESSINGDUMMY_SOURCE ${CMAKE_CURRENT_LIST_DIR}/main.cpp)

add_library(processingdummylib OBJECT ${PROCESSINGDUMMY_HEADER} ${PROCESSINGDUMMY_SOURCE})

add_executable(processingdummy 
				${CMAKE_CURRENT_LIST_DIR}/main.cpp
				${PROCESSINGDUMMY_HEADER} 
				${PROCESSINGDUMMY_SOURCE}
				$<TARGET_OBJECTS:mocca>
				$<TARGET_OBJECTS:silverbullet>)

target_link_libraries(processingdummy ${POCO_LIBRARIES})
IF (WIN32)
	TARGET_LINK_LIBRARIES(processingdummy Shlwapi.lib)
ENDIF ()

SET_TARGET_PROPERTIES(processingdummy PROPERTIES FOLDER "dummy")
SET_TARGET_PROPERTIES(processingdummy PROPERTIES FOLDER "dummy")
