INCLUDE(PlatformSpecific)
INCLUDE(CreateSourceGroups)

FILE(GLOB_RECURSE MOCCA_HEADER ${CMAKE_CURRENT_LIST_DIR}/include/mocca/*.h)
FILE(GLOB_RECURSE MOCCA_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/include)

CreateSourceGroups("${MOCCA_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${MOCCA_HEADER}" ${CMAKE_CURRENT_LIST_DIR}/include/mocca)

ADD_LIBRARY(mocca OBJECT ${MOCCA_SOURCE} ${MOCCA_HEADER})
