INCLUDE(PlatformSpecific)
INCLUDE(CreateSourceGroups)

add_definitions(-DWEBSOCKETPROTOCOL_EXPORTS="${WEBSOCKETPROTOCOL_EXPORTS}")

FILE(GLOB_RECURSE WEBSOCKET_PROTOCOL_HEADER ${CMAKE_CURRENT_LIST_DIR}/include/*.h)

FILE(GLOB_RECURSE WEBSOCKET_PROTOCOL_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
list(REMOVE_ITEM WEBSOCKET_PROTOCOL_SOURCE ${CMAKE_CURRENT_LIST_DIR}/sha1/sha.cpp ${CMAKE_CURRENT_LIST_DIR}/sha1/shacmp.cpp ${CMAKE_CURRENT_LIST_DIR}/sha1/shatest.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/include)

ADD_LIBRARY(websocketprotocol SHARED ${WEBSOCKET_PROTOCOL_SOURCE} ${WEBSOCKET_PROTOCOL_HEADER})

CreateSourceGroups("${WEBSOCKET_PROTOCOL_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${WEBSOCKET_PROTOCOL_HEADER}" ${CMAKE_CURRENT_LIST_DIR}/include)

#target_include_directories (websocketprotocol PUBLIC ${CMAKE_CURRENT_LIST_DIR})

target_link_libraries (websocketprotocol LINK_PUBLIC pushframework)